# skill-mcp

./: .coverage  .env.example  .gitignore  Procfile  pyproject.toml  render.yaml  requirements.txt
api/: index.py
docs/superpowers/plans/: 2026-03-30-skill-mcp-server.md
docs/superpowers/specs/: 2026-03-30-skill-mcp-server-design.md
skill_mcp/: __init__.py  __main__.py  cache.py  config.py  discovery.py  github_client.py  models.py  server.py
tests/: test_cache.py  test_config.py  test_discovery.py  test_github_client.py  test_integration.py  test_models.py  test_server.py
