[project]
name = "skill-mcp"
version = "0.1.0"
description = "MCP server that fetches Claude skills from GitHub repositories"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=42.0.0,<44.0.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
